# every-day-im-shuttling

./: Cargo.toml  README.md
cargo-axum/: Cargo.toml
cargo-axum/src/: main.rs
day1/: Cargo.toml
day1/src/: lib.rs  main.rs
day11/: Cargo.toml
day11/src/: lib.rs
day2/: Cargo.toml
day4/: Cargo.toml
day4/src/: lib.rs  main.rs
day5/: Cargo.toml
day5/src/: lib.rs
day6/: Cargo.toml
day6/src/: lib.rs
day7/: Cargo.toml
day7/src/: lib.rs
day8/: Cargo.toml
day8/src/: lib.rs
minus1/: Cargo.toml
minus1/src/: lib.rs  main.rs
server/: Cargo.toml
server/src/: main.rs
