[package]
name = "server"
version = "0.1.0"
edition = "2021"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minus1 = { path = "../minus1" }
day1 = { path = "../day1" }
day4 = { path = "../day4" }
day5 = { path = "../day5" }
day6 = { path = "../day6" }
day7 = { path = "../day7" }
day8 = { path = "../day8" }
axum = "0.7.4"
tokio = { version = "1.35.1", features = ["full"] }
